--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "node src/index.js",
     "start:dev": "npm run lint && nodemon --exec node src/index.js --unhandled-rejections=warn",
     "test": "jest --detectOpenHandles --coverage",
-    "lint": "eslint src/**/*.js --fix"
+    "lint": "eslint src/**/*.js --fix",
+    "sonar": "sonar-scanner" // Added sonar script here
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,8 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
-    "supertest": "^6.1.1"
+    "supertest": "^6.1.1",
+    "sonar-scanner": "1.0.0" // Add sonar-scanner as a dev dependency here
   },
   "dependencies": {
     "body-parser": "^1.19.0",
