--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start": "node src/index.js",
     "start:dev": "npm run lint && nodemon --exec node src/index.js --unhandled-rejections=warn",
     "test": "jest --detectOpenHandles --coverage",
-    "lint": "eslint src/**/*.js --fix",
-    "sonar": "sonar-scanner"
+    "lint": "eslint src/**/*.js --fix"
   },
   "repository": {
     "type": "git",
@@ -36,8 +35,7 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
-    "supertest": "^6.1.1",
-    "sonar-scanner": "^x.x.x" // Add sonar-scanner as a dev dependency here
+    "supertest": "^6.1.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
