--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "js-e2e-express-server",
   "version": "1.0.0",
   "description": "JavaScript server written with Express.js",
-  "author": "ADAM M - WEZVATECH",
   "main": "index.js",
   "directories": {
     "doc": "docs",
@@ -13,10 +12,7 @@
     "start": "node src/index.js",
     "start:dev": "npm run lint && nodemon --exec node src/index.js --unhandled-rejections=warn",
     "test": "jest --detectOpenHandles --coverage",
-    "lint": "eslint src//*.js --fix",
-    "owasp": "owasp-dependency-check --project \"nodebuild\" -f HTML JSON",
-    "sonar" : "sonar-scanner",
-    "test1": "nyc npm run test"
+    "lint": "eslint src/**/*.js --fix"
   },
   "repository": {
     "type": "git",
@@ -39,10 +35,7 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
-    "supertest": "^6.1.1",
-    "owasp-dependency-check": "^0.0.21",
-    "sonarqube-scanner": "^3.3.0",
-    "nyc": "^15.1.0"
+    "supertest": "^6.1.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -54,6 +47,6 @@
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5"
-  }
+    "trailingComma": "es5"
+ }
 }
