--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest --detectOpenHandles --coverage",
     "lint": "eslint src//*.js --fix",
     "owasp": "owasp-dependency-check --project \"nodebuild\" -f HTML JSON",
-    "sonar": "sonar-scanner -Dsonar.login=b0bd8bf1edc236e3084f1f3ef4820e27d5df3ea1",
+    "sonar" : "sonar-scanner",
     "test1": "nyc npm run test"
   },
   "repository": {
@@ -54,6 +54,6 @@
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
-    "trailingComma": "es5"
- }
+    "trailingComma": "es5"
+  }
 }
